[package]
name = "bits"
version = "0.1.0"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI tool for displaying the size of files and directories."
readme = "./README.md"
homepage = "https://github.com/cqb13/bits"
repository = "https://github.com/cqb13/bits"
keywords = ["cli"]
categories = ["command-line-utilities"]
exclude = [
	".gitignore",
	".github/*"
]

[dependencies]
